--- a/_posts/2019-08-29-浅谈进位制.md
+++ b/_posts/2019-08-29-浅谈进位制.md
@@ -2,9 +2,9 @@
 title: 浅谈进位制
 date: 2019-08-29
 categories:
-- C/C++
+- 笔记
 tags:
-- 进位制
+- C/C++
 ---
 
 ## 普通进位制
@@ -100,11 +100,9 @@ void base_k(int *a, int m, int k, double y) {
 
 ---
 
-## 其它进制系统
-
 下面讨论一些特殊的进制系统。在这些进制下，求一个用该进制表示的数字的值，仍然可以用 $k^ia_i$ 求和；但要将其他进制下的数字用该进制表示，需要采用其它的方法。
 
-### 平衡三进制
+## 平衡三进制
 
 普通三进制每一位的数值是 $0,1,2$，平衡三进制每一位的数值是 $0,1,-1$。$-1$ 在数中用 $\mathrm{T}$ 表示。
 
@@ -122,7 +120,9 @@ void balanced_ternary(int *a, int &n, int x) {
 }
 ```
 
-### 不含零的进制
+---
+
+## 不含零的进制
 
 普通的 $k$ 进制由数字 $0,1,2,\cdots,k-1$ 组成，而不含零的 $k$ 进制由数字 $1,2,3,\cdots,k$ 组成。不含零的进制只能表示正整数（这里暂不考虑小数的情况）。一个典型的例子是 Excel 表格的列序号，即不含零的 $26$ 进制。
 
