--- a/_posts/2022-07-03-Unix-命令行操作.md
+++ b/_posts/2022-07-03-Unix-命令行操作.md
@@ -10,13 +10,13 @@ tags:
 
 ## Unix 命令基础
 
-Unix 系统的命令行一般可以通过终端打开。进入终端后看到的的命令提示符如下，`$` 前面会显示当前目录，这里为 `~`。
+Unix 系统的命令行一般可以通过终端打开。进入终端后看到的的命令提示符如下，格式为 `<用户名>@<主机名>:<当前目录> $`。
 
 ```
 finlay@server:~ $ 
 ```
 
-在 `$` 后面输入命令。多条命令可以一次性输入，用 `;` 分隔。命令名和文件名可以按 <kbd>Tab</kbd> 键自动补全。
+在 `$` 后面输入命令。多条命令可以一次性输入，用 `;` 分隔。命令名和文件名可以按 `Tab` 键自动补全。
 
 <!-- more -->
 
@@ -40,7 +40,7 @@ Unix 系统只有一个根目录 `/`，根目录下有系统默认的主目录 `
 
 使用 `pwd` 命令可以显示当前目录。进入终端时，当前目录默认为当前用户的主目录。
 
-`cd <目录>` 命令可以修改当前目录。例如，`cd /bin` 进入 `/bin` 目录，`cd ./folder` 或 `cd folder` 进入当前目录下的 `folder` 子目录，目录名可以按 <kbd>Tab</kbd> 键自动补全。`cd ..` 进入上一层目录，`cd ../..` 进入上上层目录。单独的 `cd` 相当于 `cd ~`，进入当前用户的主目录。`cd -` 回到刚才的目录，可用于两个目录之间的来回切换。
+`cd <目录>` 命令可以修改当前目录。例如，`cd /bin` 进入 `/bin` 目录，`cd ./folder` 或 `cd folder` 进入当前目录下的 `folder` 子目录，目录名可以按 `Tab` 键自动补全。`cd ..` 进入上一层目录，`cd ../..` 进入上上层目录。单独的 `cd` 相当于 `cd ~`，进入当前用户的主目录。`cd -` 回到刚才的目录，可用于两个目录之间的来回切换。
 
 `ls` 命令可以列出当前目录下的文件，相当于 Windows 系统下的 `dir` 命令。`ls <目录>` 命令可以列出指定目录下的文件。
 
@@ -60,7 +60,7 @@ Unix 系统只有一个根目录 `/`，根目录下有系统默认的主目录 `
 
 ### 文件查看
 
-`more <文件>` 命令可以分屏显示文件内容。按空格显示下一屏，按 <kbd>q</kbd> 键退出。`cat <文件>` 命令可以显示文本内容，但不会分屏显示。
+`more <文件>` 命令可以分屏显示文件内容。按空格显示下一屏，按 `q` 键退出。`cat <文件>` 命令可以显示文本内容，但不会分屏显示。
 
 `head <文件>` 命令可以显示文件前若干行内容。默认显示前 $10$ 行，添加 `-n <行数>` 选项可以指定显示的行数。
 
@@ -76,7 +76,7 @@ Unix 系统只有一个根目录 `/`，根目录下有系统默认的主目录 `
 
 `>` 把命令的输出重定向到文件，`<` 把命令的输入重定向到文件。例如，`./prog < data.in > data.out` 执行当前目录下的可执行文件 `prog`，从 `data.in` 中输入，向 `data.out` 中输出。
 
-由于 `cat`命令会显示标准输入的内容，可以用 `cat > file` 从标准输入中读取内容并写入 `file` 文件，按 <kbd>Ctrl</kbd>+<kbd>D</kbd> 结束输入。
+由于 `cat`命令会显示标准输入的内容，可以用 `cat > file` 从标准输入中读取内容并写入 `file` 文件，按 `Ctrl`+`D` 结束输入。
 
 `|` 把前一个命令的输出作为后一个命令的输入。例如，如果当前目录下的文件较多，可以用 `ls -l | more` 分屏显示详细信息，用 `ls | grep an | wc -l` 显示当前目录下有多少个名字包含 `an` 的文件。
 
@@ -84,13 +84,13 @@ Unix 系统只有一个根目录 `/`，根目录下有系统默认的主目录 `
 
 ## 进程管理
 
-`ps` 命令列出当前终端下的进程。如果添加 `ax` 选项，即 `ps ax`，则列出系统中的所有进程。`top` 命令实时查看进程。按 <kbd>q</kbd> 键退出。
+`ps` 命令列出当前终端下的进程。如果添加 `ax` 选项，即 `ps ax`，则列出系统中的所有进程。`top` 命令实时查看进程。按 `q` 键退出。
 
-如果有进程正在前台执行，可以按 <kbd>Ctrl</kbd>+<kbd>C</kbd> 结束进程，否则可以使用 `kill <进程号>` 命令。进程号（PID）可以通过 `ps` 或 `top` 命令查看。如果无法结束进程，可以添加 `-9` 选项来强制结束进程。
+如果有进程正在前台执行，可以按 `Ctrl`+`C` 结束进程，否则可以使用 `kill <进程号>` 命令。进程号（PID）可以通过 `ps` 或 `top` 命令查看。如果无法结束进程，可以添加 `-9` 选项来强制结束进程。
 
 有时该进程由超级用户启动，以普通用户的身份无法结束进程。如果该普通用户在系统的 `sudo` 列表中，可以使用 `sudo` 命令伪装 `root` 用户的身份执行命令，即 `sudo kill -9 <PID>`。使用 `sudo` 时需要输入该普通用户的密码。
 
-有进程正在前台执行时，也可以按 <kbd>Ctrl</kbd>+<kbd>Z</kbd> 暂停进程。
+有进程正在前台执行时，也可以按 `Ctrl`+`Z` 暂停进程。
 
 `bg` 命令可以将前台进程放到后台继续运行。`bg <进程工作号>` 命令可以将指定进程放到后台运行，进程工作号可以通过 `jobs` 命令查看。`fg` 命令将后台进程放到前台运行，用法与 `bg` 命令类似。
 
@@ -134,9 +134,9 @@ $ source .profile
 
 `ifconfig <网卡> down` 命令可以关掉指定网卡，`ifconfig <网卡> up` 命令可以启用指定网卡。
 
-`ifconfig <网卡> add <IP 地址> netmask <子网掩码>` 命令可以给指定网卡添加子网。`ifconfig <网卡> del <IP 地址>` 命令可以删除指定网卡的子网。
+`ifconfig <网卡> add <IP地址> netmask <子网掩码>` 命令可以给指定网卡添加子网。`ifconfig <网卡> del <IP地址>` 命令可以删除指定网卡的子网。
 
-`ifconfig <网卡> <IP 地址>` 命令可以修改指定网卡的 IP 地址。
+`ifconfig <网卡> <IP地址>` 命令可以修改指定网卡的 IP 地址。
 
 `netstat` 命令可以列出网络状态。常用的选项有：
 
@@ -145,7 +145,7 @@ $ source .profile
 - `-u` 选项：只列出 UDP 相关选项。
 - `-s` 选项：按照各个协议进行统计。
 - `-p` 选项：列出相关进程信息。
-- `-c` 选项：实时更新网络状态信息，按 <kbd>Ctrl</kbd>+<kbd>C</kbd> 退出。
+- `-c` 选项：实时更新网络状态信息，按 `Ctrl`+`C` 退出。
 - `-r` 选项：查看路由信息。
 - `-i` 选项：查看接口情况。
 
@@ -159,9 +159,9 @@ $ source .profile
 finlay@server:~ $ nc -l -p 8080
 ```
 
-`telnet <IP 地址> <端口号>` 命令可以远程登录服务器的指定端口。
+`telnet <地址> <端口号>` 命令可以远程登录服务器的指定端口。
 
-以下命令让客户端登录服务器的 `8080` 端口，按 <kbd>Ctrl</kbd>+<kbd>]</kbd> 退出。
+以下命令让客户端登录服务器的 `8080` 端口，按 `Ctrl`+`]` 退出。
 
 ```
 guest@client:~ $ telnet 192.168.1.22 8080
@@ -175,9 +175,9 @@ guest@client:~ $ telnet 192.168.1.22 8080
 
 TELNET 和 FTP 协议并不安全。连接远程服务器更常采用 SSH。
 
-`ssh <IP 地址>` 命令可以远程登录服务器的默认端口。添加 `-p <端口号>` 选项可以指定端口。
+`ssh <地址>` 命令可以远程登录服务器的默认端口。添加 `-p <端口号>` 选项可以指定端口。
 
-默认使用客户端登录的用户名来登录远程服务器。如果要指定登录的用户名，需要使用 `ssh <用户名>@<IP 地址>`。
+默认使用客户端登录的用户名来登录远程服务器。如果要指定登录的用户名，需要使用 `ssh <用户名>@<地址>`。
 
 以下命令用用户名 `finlay` 登录服务器的默认端口。
 
@@ -288,7 +288,7 @@ guest@client:~ $ ssh test22
 
 ### `gcc` 编译
 
-`gcc <.c 文件>` 命令对指定的 `.c` 文件进行编译。如果添加 `-o <文件名>` 选项，则会产生可执行文件。如果添加 `-c` 选项，则只产生 `.o` 文件，不进行链接。`--save-temps` 选项可以保留编译的中间结果，包括 `.i` 文件、`.s` 文件、`.o` 文件等。
+`gcc <.c文件>` 命令对指定的 `.c` 文件进行编译。如果添加 `-o <文件名>` 选项，则会产生可执行文件。如果添加 `-c` 选项，则只产生 `.o` 文件，不进行链接。`--save-temps` 选项可以保留编译的中间结果，包括 `.i` 文件、`.s` 文件、`.o` 文件等。
 
 以 `main.c`、`sum.c` 两个 `.c` 文件以及 `sum.h` 一个 `.h` 文件为例。可以使用如下命令编译两个 `.c` 文件，产生可执行文件 `sum`。
 
@@ -326,7 +326,7 @@ $ gdb sum
 
 为了保护源码、避免重复编译，通常将头文件的源码编译成 `.o` 文件后打包成库。静态库（`.a` 文件）在编译时会被链接到目标代码中，程序执行时不需要库。动态链接库（`.so` 文件）不包含在目标代码中，程序执行时需要装载和使用动态链接库中的函数。嵌入式系统中通常使用静态库。
 
-先用 `gcc -c <.c 文件>` 命令编译得到 `.o` 文件，然后用 `ar rcs <文件名> <.o 文件>` 命令将一个或多个 `.o` 文件打包成库文件。库文件名应为 `lib<库名>.a`。
+先用 `gcc -c <.c文件>` 命令编译得到 `.o` 文件，然后用 `ar rcs <文件名> <.o文件>` 命令将一个或多个 `.o` 文件打包成库文件。库文件名应为 `lib<库名>.a`。
 
 在本例中，如果要把 `sum.c` 文件打包成库，则可以使用如下命令。
 
@@ -492,7 +492,7 @@ $ make ARGS="123" test
 例如，`main.d` 的内容为：
 
 ```
-main.o: main.c main.h
+main.o: main.c sum.h
 ```
 
 因此在 Makefile 文件的编译选项中添加 `-MMD`，用来产生 `.d` 文件。
